2025-02-13T01:42:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13298608247 # 817
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-13
* notice: last 14d: unq all: 9 28
* notice: prev accum: outdated-unq outdated-all / unq all: 963 5019 / 974 5050
* notice: next accum: outdated-unq outdated-all / unq all: 965 5022 / 974 5050
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-29] / []

2025-02-12T01:42:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13276205278 # 815
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-12
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 959 5003 / 973 5049
* notice: next accum: outdated-unq outdated-all / unq all: 963 5019 / 974 5050
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-01-28] / [2025-02-11]

2025-02-11T01:42:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13254148851 # 813
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-11
* notice: last 14d: unq all: 13 35
* notice: prev accum: outdated-unq outdated-all / unq all: 958 5001 / 973 5049
* notice: next accum: outdated-unq outdated-all / unq all: 959 5003 / 973 5049
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -11 / +4 +16 -1 -11 / 3 5
* notice: removed / changed dates: [2025-01-27] / [2025-01-28]

2025-02-08T12:37:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13215689171 # 808