@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-13T01:42:55Z",
-  "count_outdated" : 5022,
-  "uniques_outdated" : 965,
-  "count" : 5050,
-  "uniques" : 974,
+  "timestamp" : "2025-02-13T12:42:09Z",
+  "count_outdated" : 5028,
+  "uniques_outdated" : 966,
+  "count" : 5052,
+  "uniques" : 976,
   "views" : [
-    {
-      "timestamp": "2025-01-30T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-31T00:00:00Z",
       "count": 1,
@@ -70,6 +61,15 @@
     },
     {
       "timestamp": "2025-02-11T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-02-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
