@@ -1,12 +1,7 @@
 {
-  "count": 28,
-  "uniques": 9,
+  "count": 24,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2025-01-30T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-01-31T00:00:00Z",
       "count": 1,
@@ -39,6 +34,11 @@
     },
     {
       "timestamp": "2025-02-11T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-02-12T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
